--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "paradox-landing",
+  "homepage": "https://i-am-paradox.github.io/aniwebiste",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out -t",
     "start": "next start",
     "lint": "eslint"
   },
@@ -22,6 +25,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
